--- a/src/UI/Web/index.html
+++ b/src/UI/Web/index.html
@@ -1,1 +1,28 @@
-<h1>Index HTML</h1>
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+        <link rel="stylesheet" href="./styles/styles.css">
+    </head>
+    <body>
+        <div class="main">
+            <div class="row">
+                <div class="col-md-4 fileTreeWrapper">
+                    <ui-tree id="fileTree">
+                        <script type="application/json">
+                        {
+                            "canSelectRoot": true
+                        }
+                        </script>
+                    </ui-tree>
+                </div>
+                <div class="col-md-8 contentWrapper">
+                    <ui-content id="fileContent"></ui-content>
+                </div>
+            </div>
+        </div>
+        <script type="module" src="./js/index.js" async></script>
+    </body>
+</html>
