--- a/src/UI/Web/index.html
+++ b/src/UI/Web/index.html
@@ -4,7 +4,7 @@
         <meta http-equiv="content-type" content="text/html; charset=UTF-8">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-        <link rel="stylesheet" href="./styles/styles.css">
+        <link rel="stylesheet" href="/admin/styles/styles.css">
     </head>
     <body>
         <div class="main">
@@ -23,6 +23,6 @@
                 </div>
             </div>
         </div>
-        <script type="module" src="./js/index.js" async></script>
+        <script type="module" src="/admin/js/index.js" async></script>
     </body>
 </html>
